--- a/_includes/aboutme/personalexperience/aviation.html
+++ b/_includes/aboutme/personalexperience/aviation.html
@@ -1,5 +1,10 @@
 <details id="aviation">
-    <summary>Aviation</summary>
+    <summary>
+        <span class="header">
+            <span class="left">Aviation</span>
+            <span class="right"></span>
+        </span>
+    </summary>
     <p> In the year 2000, my path crossed with an individual who was immersed in the
         pursuit of their pilot's license. Intrigued by the prospect of taking flight, I
         quickly became captivated by the idea. I didn't know that was a thing you could
