--- a/_includes/aboutme/personalexperience/discountcasinogear.html
+++ b/_includes/aboutme/personalexperience/discountcasinogear.html
@@ -1,19 +1,22 @@
 <details id="discountcasinogear">
-    <summary>Poker and Discount Casino Gear</summary> <a name="poker"></a> <a
-        name="pokeranddiscountcasinogear"></a>
+    <summary>
+        <span class="header">
+            <span class="left">Poker and Discount Casino Gear</span>
+            <span class="right"></span>
+        </span>
+    </summary>
+    <a name="poker"></a> <a name="pokeranddiscountcasinogear"></a>
     <p> In 2003, web development became the next big thing, and I was eager to learn.
         However, there were no opportunities for me to do so in my current workplace.
         Therefore, I decided to venture out on my own and start experimenting. At that
         time, I was already building gaming tables for myself and my friends, so I
         thought of creating a website to sell those tables. Before long, an importer
         discovered my website and approached me for a partnership. Within six months, I
-        successfully launched <a href="https://www.discountcasinogear.com/"
-            target="_blank">Discount Casino Gear <i
+        successfully launched <a href="https://www.discountcasinogear.com/" target="_blank">Discount Casino Gear <i
                 class="fas fa-external-link-alt fa-xs"></i></a>, which consistently
         generated half a million in revenue year after year until I eventually sold it
         for a profit in 2011. </p>
-    <p> I had launched <a href="https://www.discountcasinogear.com/"
-            target="_blank">Discount Casino Gear <i
+    <p> I had launched <a href="https://www.discountcasinogear.com/" target="_blank">Discount Casino Gear <i
                 class="fas fa-external-link-alt fa-xs"></i></a> a year before the poker
         craze really took off. I invested everything I earned into cost per click
         advertising. Since my website was fully automated, I had minimal overhead.
@@ -22,8 +25,7 @@
         created programmatically whenever new products were released. Additionally, I
         implemented a system to scrape my competitors' websites every night and
         dynamically adjust pricing to undercut them. My main focus was customer service.
-        Over time, <a href="https://www.discountcasinogear.com/"
-            target="_blank">Discount Casino Gear <i
+        Over time, <a href="https://www.discountcasinogear.com/" target="_blank">Discount Casino Gear <i
                 class="fas fa-external-link-alt fa-xs"></i></a> became an established
         player in the market, while competitors came and went, solidifying its position
         as one of the leading gaming supply websites. </p>
