--- a/_includes/aboutme/personalexperience/myjourney.html
+++ b/_includes/aboutme/personalexperience/myjourney.html
@@ -1,6 +1,11 @@
 <details id="journey">
-    <summary>My Software Engineering Journey</summary> <a
-        name="mysoftwareengineeringjourney"></a> <a name="softwareengineering"></a>
+    <summary>
+        <span class="header">
+            <span class="left">My Software Engineering Journey</span>
+            <span class="right"></span>
+        </span>
+    </summary>
+    <a name="mysoftwareengineeringjourney"></a> <a name="softwareengineering"></a>
     <p> Microsoft acquired Fox Software to utilize their Rushmore technology for
         building Microsoft SQL Server, which eventually led to the release of Microsoft
         Visual FoxPro. It was my first exposure to object-oriented programming, and I
