--- a/_includes/aboutme/personalexperience/other.html
+++ b/_includes/aboutme/personalexperience/other.html
@@ -1,11 +1,18 @@
 <details id="other">
-    <summary>Other interests: Craft Beers, Cloud Computing and Learning (not necessarily in
-        that order)</summary> 
-        <a name="craftbeers"></a> 
-        <a name="cloudcomputing"></a> 
-        <a name="learning"></a> 
-        <a name="otherinterests"></a> 
-        <a name="craftbeerscloudcomputingandlearning"></a>
+    <summary>
+        <span class="header">
+            <span class="left">Other Interests</span>
+            <span class="right"></span>
+        </span>
+        <div class="description">
+            Craft Beers, Cloud Computing and Learning
+        </div>
+    </summary>
+    <a name="craftbeers"></a>
+    <a name="cloudcomputing"></a>
+    <a name="learning"></a>
+    <a name="otherinterests"></a>
+    <a name="craftbeerscloudcomputingandlearning"></a>
     <p> Craft beer has been a long-standing passion of mine, even before it gained
         widespread popularity. I consider myself fortunate to have had Old Dominion
         Brewery, one of only two microbreweries in Northern Virginia, located just down
@@ -37,8 +44,8 @@
         craftsmanship, leading to a series of Craps tables that I crafted and sold on
         the platform. Eventually, this entrepreneurial spirit prompted me to venture
         into the realm of website creation, evolving my initial venture, "Game Tables by
-        DeMay," into the flourishing enterprise known as <a
-            href="https://www.discountcasinogear.com/" target="_blank">Discount Casino
+        DeMay," into the flourishing enterprise known as <a href="https://www.discountcasinogear.com/"
+            target="_blank">Discount Casino
             Gear <i class="fas fa-external-link-alt fa-xs"></i></a>. </p>
     <p> Currently, I am focused on expanding my expertise by pursuing certifications in
         AWS and Azure. This endeavor aligns with my active engagement in various
