--- a/_includes/aboutsite/docker.html
+++ b/_includes/aboutsite/docker.html
@@ -1,5 +1,10 @@
 <details id="docker">
-    <summary>Docker and Python Docker Module</summary>
+    <summary>
+        <span class="header">
+            <span class="left">Docker and Python Docker Module</span>
+            <span class="right"></span>
+        </span>
+    </summary>
     <p>
         Docker is an open-source platform that enables developers to automate the deployment
         and management of applications in lightweight, isolated containers. Containers
