--- a/_includes/aboutsite/pythongit.html
+++ b/_includes/aboutsite/pythongit.html
@@ -1,5 +1,10 @@
 <details id="pythongit">
-    <summary>Python Git Module</summary>
+    <summary>
+        <span class="header">
+            <span class="left">Python Git Module</span>
+            <span class="right"></span>
+        </span>
+    </summary>
     <p>Python Git Module is used in my background task to download any changes from
         my remote GitHub repository to my local repository whenever a change is made.
         This permits me to modify the content of my site from anywhere, including on my mobile phone and have it pushed
