--- a/_includes/aboutsite/sqlite.html
+++ b/_includes/aboutsite/sqlite.html
@@ -1,5 +1,10 @@
 <details id="sqlite">
-    <summary>SQLite</summary>
+    <summary>
+        <span class="header">
+            <span class="left">SQLite</span>
+            <span class="right"></span>
+        </span>
+    </summary>
     <p>RabbitMQ is a message broker that focuses on facilitating communication and message
         exchange between different systems. It primarily acts as a middleware for handling message queues and routing
         messages between producers and consumers.
