--- a/_includes/resume/employmenthistory.html
+++ b/_includes/resume/employmenthistory.html
@@ -1,5 +1,13 @@
-<details open> <a name="employment"></a> <a name="history"></a> <a name="employmenthistory"></a>
-    <summary class="sectionheader">Employment History</summary>
+<details open>
+    <a name="employment"></a>
+    <a name="history"></a>
+    <a name="employmenthistory"></a>
+    <summary class="sectionheader">
+        <span class="header">
+            <span class="left">Employment History</span>
+            <span class="right"></span>
+        </span>
+    </summary>
     <div>
         {% include resume/employmenthistory/altamira.html %}
         {% include resume/employmenthistory/amazon.html %}
