--- a/_includes/resume/employmenthistory/gigatrust.html
+++ b/_includes/resume/employmenthistory/gigatrust.html
@@ -1,7 +1,13 @@
 <details>
-    <summary id="gigatrust"> <span class="left">GigaTrust</span> <span class="right">Herndon,
-            Virginia</span><br> March 2009 - November 2019<br>
-        <i>Software Development Manager / Principal Software Engineer</i>
+    <summary id="gigatrust">
+        <span class="header">
+            <span class="left">GigaTrust</span>
+            <span class="right">March 2009 - November 2019</span>
+        </span>
+        <div class="description">
+            Herndon, Virginia<br>
+            <i>Software Development Manager / Principal Software Engineer</i>
+        </div>
     </summary>
     <p>GigaTrust's primary objectives was to enhance our customer's data security by safeguarding them against
         inadvertent leakage of sensitive information. As a technical lead I was responsible for overseeing development
