--- a/_includes/resume/employmenthistory/skillsassessment.html
+++ b/_includes/resume/employmenthistory/skillsassessment.html
@@ -1,7 +1,13 @@
 <details> <a name="assessment"></a> <a name="skillsassessment"></a>
-    <summary id="skillsassessment"> <span class="left">Skills
-            Assessment</span> <span class="right">Ashburn, Virginia</span><br>
-        November 2019 - January 2020 </summary>
+    <summary id="skillsassessment">
+        <span class="header">
+            <span class="left">Skills Assessment</span>
+            <span class="right">November 2019 - January 2020</span>
+        </span>
+        <div class="description">
+            Ashburn, Virginia
+        </div>
+    </summary>
     <p>I found myself out of work for the first time in almost 25 years when GigaTrust went bankrupt and closed it's
         operations. During this time, I focused on upgrading my skills and exploring new technologies.</p>
     <p>I dedicated my efforts to studying cloud computing and full-stack web development. These efforts allowed me to
