--- a/_includes/resume/patents.html
+++ b/_includes/resume/patents.html
@@ -1,6 +1,11 @@
 <div class="no-page-break">
     <details id="patents">
-        <summary class="sectionheader">Patents</summary>
+        <summary class="sectionheader">
+            <span class="header">
+                <span class="left">Patents</span>
+                <span class="right"></span>
+            </span>
+        </summary>
         <ul class="two-column-list">
             <li>
                 <div class="flexdiv">
