--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,5 +1,10 @@
 <details open>
-    <summary id="professionalskills" class="sectionheader">Professional Skills</summary>
+    <summary id="professionalskills">
+        <span class="header">
+            <span class="left">Professional Skills</span>
+            <span class="right"></span>
+        </span>
+    </summary>
     <ul class="skills competency-level">
         <li class="skill">
             <strong class="skill-type large proficient">Security:</strong>
@@ -16,7 +21,7 @@
             </ul>
         </li>
         <li class="skill">
-            <strong class="skill-type large proficient">Backend Development:</strong>
+            <strong class="skill-type large expert">Backend Development:</strong>
             <ul class="skill-items competency-level">
                 <li class="diamond">SQL</li>
                 <li class="diamond">Java</li>
@@ -36,7 +41,7 @@
             </ul>
         </li>
         <li class="skill">
-            <strong class="skill-type large proficient">Device Drivers, Windows Services, APIs:</strong>
+            <strong class="skill-type large expert">Device Drivers, Windows Services, APIs:</strong>
             <ul class="skill-items competency-level">
                 <li class="diamond">C/C++</li>
                 <li class="diamond">Rust</li>
@@ -44,7 +49,7 @@
             </ul>
         </li>
         <li class="skill">
-            <strong class="skill-type large proficient">Windows Desktop Applications:</strong>
+            <strong class="skill-type large expert">Windows Desktop Applications:</strong>
             <ul class="skill-items competency-level">
                 <li class="diamond">C# .NET</li>
                 <li class="diamond">Visual Basic 6.0</li>
@@ -65,9 +70,10 @@
             <strong class="skill-type large proficient">Databases:</strong>
             <ul class="skill-items competency-level">
                 <span class="diamond">RDBMS
-                (<li class="diamond">SQL Server</li>
-                <li class="diamond">MySQL</li>
-                <li>PostgreSQL</li>) </span>
+                    (<li class="diamond">SQL Server</li>
+                    <li class="diamond">MySQL</li>
+                    <li>PostgreSQL</li>)
+                </span>
                 NoSQL
                 (<li class="diamond">MongoDB</li>
                 <li>DynamoDB</li>)
@@ -91,7 +97,7 @@
             </ul>
         </li>
         <li class="skill">
-            <strong class="skill-type large proficient">System Architecture:</strong>
+            <strong class="skill-type large expert">System Architecture:</strong>
             <ul class="skill-items competency-level">
                 <li class="diamond">System Design</li>
                 <li class="diamond">Distributed Systems</li>
