--- a/_includes/resume/summary.html
+++ b/_includes/resume/summary.html
@@ -1,5 +1,11 @@
 <details open>
-    <summary class="sectionheader">Summary</summary>
+    <summary>
+        <span class="header">
+            <span class="left">Summary</span>
+            <span class="right"></span>
+        </span>
+    </summary>
+    <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot" class="headshot">
     <p> With over 30 years of experience as a software engineer, my expertise extends beyond
         technical knowledge. I have a comprehensive understanding of the entire software
         lifecycle, covering concept development, implementation, testing, delivery, and user
