--- a/_includes/sitelayout/headercontent.html
+++ b/_includes/sitelayout/headercontent.html
@@ -1,29 +1,39 @@
-<div class="address">
-    <h1>Thomas J. DeMay, II</h1>
-    <h2>Principal Software Engineer</h2>
-    <a href="https://www.tomdemay.pro/" target="_blank">https://www.tomdemay.pro/<i class="fas fa-external-link-alt fa-xs"></i></a><br>
-    {% if site.localhost %}
-    {{ "YmRwQIzC5NrQ3urmykCG3urk6FhApujK4NDK3Obe3ECsgkBkZGxqbHjE5Hx4wkDQ5MrMek7awtLY6N50yMrawvJc6N7agM7awtLYXMbe2k5A6MLkzsroek6+xNjC3NZOfMjK2sLyXOje2oDO2sLS2FzG3tp4XsJ8WEBuYGZaZHBmWm5yaGo=" | deobfuscatefilter }}
-    {% endif %}
-</div>
-<div class="links">
-    <div class="table">
-        <div class="cell column-one">Personal Site:</div>
-        <div class="cell column-two"><a href="https://www.tomdemay.pro/" target="_blank">www.tomdemay.pro/
-                <i class="fas fa-external-link-alt fa-xs"></i></a></div>
-        <div class="cell column-one">LinkedIn:</div>
-        <div class="cell column-two"><a href="https://www.linkedin.com/in/demaytom/" target="_blank">linkedin.com/in/demaytom/
-                <i class="fas fa-external-link-alt fa-xs"></i></a></div>
-        <div class="cell column-one">GitHub:</div>
-        <div class="cell column-two"><a href="https://github.com/tomdemay" target="_blank">github.com/tomdemay/
-                <i class="fas fa-external-link-alt fa-xs"></i></a></div>
-        <div class="cell column-one">Stack Overflow:</div>
-        <div class="cell column-two"><a href="https://stackoverflow.com/users/1932930/tdemay"
-                target="_blank">stackoverflow.com/users/1932930/tdemay/<i class="fas fa-external-link-alt fa-xs"></i></a>
-        </div>
-        <div class="cell column-one">Recommendations</div>
-        <div class="cell column-two"><a href="https://www.linkedin.com/in/demaytom/details/recommendations/"
-                target="_blank">linkedin.com/in/demaytom/details/recommendations/<i class="fas fa-external-link-alt fa-xs"></i></a>
+<div class="headercontent">
+    <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot" class="headshot">
+    <div class="address">
+        <h1>Thomas J. DeMay, II</h1>
+        <h2>Principal Software Engineer</h2>
+        <a href="https://www.tomdemay.pro/" target="_blank">https://www.tomdemay.pro/<i
+                class="fas fa-external-link-alt fa-xs"></i></a><br>
+        {% if site.localhost %}
+            <!-- I cannot get deobfuscatefilter to work on github actions deploy. problem for another time. -->
+            {{
+            "YmRwQIzC5NrQ3urmykCG3urk6FhApujK4NDK3Obe3ECsgkBkZGxqbHjE5Hx4wkDQ5MrMek7awtLY6N50yMrawvJc6N7agM7awtLYXMbe2k5A6MLkzsroek6+xNjC3NZOfMjK2sLyXOje2oDO2sLS2FzG3tp4XsJ8WEBuYGZaZHBmWm5yaGo="
+            | deobfuscatefilter }}
+        {% endif %}
+    </div>
+    <div class="links">
+        <div class="table">
+            <div class="cell column-one">Personal Site:</div>
+            <div class="cell column-two"><a href="https://www.tomdemay.pro/" target="_blank">www.tomdemay.pro/
+                    <i class="fas fa-external-link-alt fa-xs"></i></a></div>
+            <div class="cell column-one">LinkedIn:</div>
+            <div class="cell column-two"><a href="https://www.linkedin.com/in/demaytom/"
+                    target="_blank">linkedin.com/in/demaytom/
+                    <i class="fas fa-external-link-alt fa-xs"></i></a></div>
+            <div class="cell column-one">GitHub:</div>
+            <div class="cell column-two"><a href="https://github.com/tomdemay" target="_blank">github.com/tomdemay/
+                    <i class="fas fa-external-link-alt fa-xs"></i></a></div>
+            <div class="cell column-one">Stack Overflow:</div>
+            <div class="cell column-two"><a href="https://stackoverflow.com/users/1932930/tdemay"
+                    target="_blank">stackoverflow.com/users/1932930/tdemay/<i
+                        class="fas fa-external-link-alt fa-xs"></i></a>
+            </div>
+            <div class="cell column-one">Recommendations</div>
+            <div class="cell column-two"><a href="https://www.linkedin.com/in/demaytom/details/recommendations/"
+                    target="_blank">linkedin.com/in/demaytom/details/recommendations/<i
+                        class="fas fa-external-link-alt fa-xs"></i></a>
+            </div>
         </div>
     </div>
 </div>
