--- a/_includes/aboutme/personalexperience.html
+++ b/_includes/aboutme/personalexperience.html
@@ -1,5 +1,11 @@
 <details id="personalexperience">
-    <summary>Personal Experience</summary> <a name="personal"></a>
+    <summary>
+        <span class="header">
+            <span class="left">Personal Experience</span>
+            <span class="right"></span>
+        </span>
+
+    </summary> <a name="personal"></a>
     <div>
         {% include aboutme/personalexperience/findingmypath.html %}
         {% include aboutme/personalexperience/myjourney.html %}
