--- a/_includes/aboutme/personalexperience/family.html
+++ b/_includes/aboutme/personalexperience/family.html
@@ -1,5 +1,10 @@
 <details id="family">
-    <summary>Family</summary>
+    <summary>
+        <span class="header">
+            <span class="left">Family</span>
+            <span class="right"></span>
+        </span>
+    </summary>
     <p> I was actually born way back in 1968 in Camden, New Jersey, but we lived in Long
         Island, New York at the time. I'm the third out of four children in my family.
         My awesome older sister Dawn came first, followed by my older brother Robert,
