--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -1,5 +1,10 @@
 <details id="education">
-    <summary class="sectionheader">Education</summary>
+    <summary class="sectionheader">
+        <span class="header">
+            <span class="left">Education</span>
+            <span class="right"></span>
+        </span>
+    </summary>
     <ul class="two-column-list">
         <li>
             <div class="flexdiv">
