--- a/_includes/sitelayout/sitenavigation.html
+++ b/_includes/sitelayout/sitenavigation.html
@@ -1,149 +1,28 @@
 <nav>
-  <div class="tomdemaypro-logo">
-    <img
-      src="assets/images/tomdemaypro-darkgrey.png"
-      alt="tomdemaypro"
-      class="tomdemaypro-logo"
-    />
-  </div>
-  <div class="logo-full">Thomas J. DeMay, II</div>
-  <div class="logo-short">Tom DeMay</div>
-  <div></div>
-  <input type="checkbox" id="toggle-nav" class="toggle-nav" />
-  <label for="toggle-nav" class="toggle-nav-label">
-    <span class="menu-icon">
-      <span class="line"></span>
-      <span class="line"></span>
-      <span class="line"></span>
-    </span>
-  </label>
-  <ul class="navigation">
-    <li><a href="index.html">About Me</a></li>
-    <li><a href="resume.html">Resume</a></li>
-    <li><a href="contactme.html">Contact Me</a></li>
-    <li><a href="aboutthissite.html">About Site</a></li>
-    {% if page.enable_download %}
-    <li class="download-menu-item">
-        <a id="download-button" class="show-download-label-checkbox" onclick="window.print(); return false;">Print to PDF</a>
-    </li>
-    {% endif %}
-  </ul>
+    <div class="tomdemaypro-logo">
+        <img src="assets/images/tomdemaypro-darkgrey.png" alt="tomdemaypro" />
+        <div class="logo-full">Thomas J. DeMay, II</div>
+        <div class="logo-short">Tom DeMay</div>
+    </div>
+    <div></div>
+    <input type="checkbox" id="dropdown-menu-check-box" class="dropdown-menu-check-box" />
+    <label for="dropdown-menu-check-box" class="hamburger-menu">
+        <span class="menu-icon">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+        </span>
+    </label>
+    <ul class="navigation-menu-items">
+        <li><a href="index.html">About Me</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contactme.html">Contact Me</a></li>
+        <li><a href="aboutthissite.html">About Site</a></li>
+        {% if page.enable_print_to_pdf %}
+        <li class="download-menu-item">
+            <a id="download-button" class="show-download-label-checkbox" onclick="window.print(); return false;">Print
+                to PDF</a>
+        </li>
+        {% endif %}
+    </ul>
 </nav>
-
-<style>
-  @media screen and (min-width: {% if page.enable_download %}985px {% else %} 865px {% endif %}) {
-    /* hello */
-    .tomdemaypro-logo {
-      display: inherit;
-    }
-    .logo-full {
-      display: none;
-    }
-
-    .logo-short {
-      display: none;
-    }
-  }
-
-  @media screen and (max-width: {% if page.enable_download %}984px {% else %} 864px {% endif %}) {
-    .tomdemaypro-logo {
-      display: inherit;
-    }
-    .logo-full {
-      display: none;
-    }
-
-    .logo-short {
-      display: none;
-    }
-  }
-
-  @media screen and (max-width: 390px) {
-    .tomdemaypro-logo {
-      display: none;
-    }
-    .logo-full {
-      display: inherit;
-    }
-
-    .logo-short {
-      display: none;
-    }
-  }
-
-  @media screen and (max-width: 300px) {
-    .tomdemaypro-logo {
-      display: none;
-    }
-    .logo-full {
-      display: none;
-    }
-
-    .logo-short {
-      display: inherit;
-    }
-  }
-
-  @media screen and (max-width: 225px) {
-    .tomdemaypro-logo {
-      display: none;
-    }
-    .logo-full {
-      display: none;
-    }
-
-    .logo-short {
-      display: none;
-    }
-  }
-  @media screen and (max-width: {% if page.enable_download %}984px {% else %} 864px {% endif %}) {
-    .toggle-nav-label {
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      position: relative;
-      cursor: pointer;
-      padding: 10px;
-    }
-
-    .menu-icon {
-      display: block;
-      width: 30px;
-      height: 24px;
-      position: relative;
-      cursor: pointer;
-    }
-
-    .line {
-      display: block;
-      width: 100%;
-      height: 2px;
-      background-color: #fff;
-      margin-bottom: 4px;
-      transition: background-color 0.3s ease;
-    }
-
-    .toggle-nav:checked ~ .navigation {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    }
-
-    .navigation {
-      display: none;
-      padding: 10px;
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 5px;
-      position: absolute;
-      top: 100%;
-      right: 0;
-      left: 0;
-      z-index: 2;
-    }
-
-    .navigation li {
-      margin: 10px 0;
-    }
-  }
-</style>
