--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ "/assets/css/default-styles.css" | relative_url }}">
     <link id="print-css" rel="stylesheet" href="{{ "/assets/css/print-styles.css" | relative_url }}" media="print">
     <link id="screen-css" rel="stylesheet" href="{{ "/assets/css/screen-styles.css" | relative_url }}" media="screen">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
 </head>
 
@@ -18,21 +18,14 @@
     </header>
 
     <section id="about" class="content">
-        
+
         {% include sitelayout/leftpane.html %}
 
         <div class="stacked-container">
 
-            {% if page.enable_download %}
-                {% include resume/coverletter.html %}
-            {% else %}
-                <div class="headercontent">
-                    {% include sitelayout/headercontent.html %}
-                </div>
-            {% endif %}
-
-            {% if page.include_page2_header %}
-                {% include sitelayout/page2header.html %}
+            {% if page.print_cover_letter %}
+            {% include resume/coverletter.html %}
+            {% include_relative _includes/sitelayout/headercontent.html %}
             {% endif %}
 
             <div class="right-pane">
@@ -43,9 +36,10 @@
 
         </div>
     </section>
-<body>
 
-<script src="{{ '/assets/js/script.js' | relative_url }}">
-</script>
+    <body>
+
+        <script src="{{ '/assets/js/script.js' | relative_url }}">
+        </script>
 
 </html>
